--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,27 +1,4 @@
 {
     "type": "Config",
-    "favicon": "/images/favicon.svg",
-    "footer": {
-        "copyrightText": "Powered by [Netlify](https://www.netlify.com/).",
-        "navLinks": [
-            {
-                "type": "Link",
-                "label": "Home",
-                "underline": "hover",
-                "url": "/"
-            },
-            {
-                "type": "Link",
-                "label": "About",
-                "underline": "hover",
-                "url": "/about"
-            },
-            {
-                "type": "Link",
-                "label": "Documentation",
-                "underline": "hover",
-                "url": "https://docs.netlify.com/visual-editor/overview/"
-            }
-        ]
-    }
+    "favicon": "/images/favicon.svg"
 }
